0.5 commit 10